<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- All layouts - xml -->
    <string name="mobile_library">Mobile Library</string>
    <string name="isbn_number">ISBN number</string>
    <string name="enter_the_books_title">Enter the book\'s title</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="enter_the_authors_name">Enter the author\'s name</string>
    <string name="release_date">Release date</string>
    <string name="format">YYYY format</string>
    <string name="book_image">Book Image</string>
    <string name="select_image_from_gallery">Select Image from Gallery</string>
    <string name="capture_image_with_camera">Capture Image with Camera</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="type">Type</string>
    <string name="printed">Printed</string>
    <string name="digital">Digital</string>
    <string name="where_is_it">Where is it?</string>
    <string name="who_has_it">Who has it?</string>
    <string name="second_hand">Second hand</string>
    <string name="new_book">New</string>
    <string name="condition">Condition</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="display">Display</string>
    <string name="add">Add</string>
    <string name="set_background">Set Background</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="select_background">Select Background</string>
    <string name="filter_function">Filter function</string>
    <string name="by_language">By Language</string>
    <string name="hungarian">Hungarian</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="spanish">Spanish</string>
    <string name="scottish_gaelic">Scottish gaelic</string>
    <string name="categories">Categories</string>
    <string name="other">Other</string>
    <string name="esotericism">Esotericism</string>
    <string name="healthy_lifestyle">Healthy lifestyle</string>
    <string name="psychology">Psychology</string>
    <string name="animals">Animals</string>
    <string name="prehistoric_animals">Prehistoric animals</string>
    <string name="hobby">Hobby</string>
    <string name="weapons">Weapons</string>
    <string name="history">History</string>
    <string name="foreign_language">Foreign language</string>
    <string name="travel">Travel</string>
    <string name="science">Science</string>
    <string name="status">Status</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="in_progress">In progress</string>
    <string name="m">M</string>
    <string name="d">D</string>
    <string name="e_book">E-Book</string>
    <string name="book">Book</string>
    <string name="sort_function">Sort function</string>
    <string name="sort_option">Sort options</string>
    <string name="title_a_z">Title A–Z</string>
    <string name="title_z_a">Title Z–A</string>
    <string name="author_a_z">Author A–Z</string>
    <string name="author_z_a">Author Z-A</string>
    <string name="by_release_date_ascending">By Release Date Ascending</string>
    <string name="by_release_date_descending">By Release Date Descending</string>
    <string name="list">List view</string>
    <string name="grid">Grid view</string>

    <!-- AddBookActivity -->
    <string name="add_new_book">Add book</string>
    <string name="update_book">Update book</string>
    <string name="nothing_saved">Nothing saved</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="scan_successful">Successful scan: %1$s</string>
    <string name="scan_cancelled">Scan cancelled</string>
    <string name="title_and_author_empty">Title and Author fields cannot be empty!</string>
    <string name="invalid_date_format">Please enter the date in correct format (YYYY)!</string>
    <string name="no_camera_app_available">No camera app available!</string>
    <string name="image_copy_error">Error copying image</string>
    <string name="fetch_starting_isbn">Fetch started with ISBN: %1$s</string>
    <string name="unknown_title">Unknown title</string>
    <string name="unknown_author">Unknown author</string>
    <string name="book_saved_successfully">Book saved successfully</string>
    <string name="book_already_exists">This book is already saved</string>
    <string name="no_book_data_found">No book data found</string>
    <string name="book_fetch_error">Error occurred while fetching the book</string>

    <!-- BackgroundSelectorFragment -->
    <string name="background_saved">Background image saved!</string>
    <string name="background_set_success">Background successfully set.</string>
    <string name="background_load_failed">Failed to load the image.</string>

    <!-- BookScanner -->
    <string name="scan_isbn_prompt">Scan ISBN</string>

    <!-- UpdateActivity -->
    <string name="error_no_id">An error occurred, no ID found!</string>

    <!-- FilterFragment -->
    <string name="selected">selected</string>
    <string name="deselected">deselected</string>
    <!-- Languages -->
    <string name="language_hu">Hungarian</string>
    <string name="language_en">English</string>
    <string name="language_de">German</string>
    <string name="language_jp">Japanese</string>
    <string name="language_cn">Chinese</string>
    <string name="language_sp">Spanish</string>
    <string name="language_sg">Scottish Gaelic</string>
    <!-- Categories -->
    <string name="category_other">Other</string>
    <string name="category_esoterics">Esoterics</string>
    <string name="category_healthy_lifestyle">Healthy lifestyle</string>
    <string name="category_psychology">Psychology</string>
    <string name="category_animals">Animals</string>
    <string name="category_dinosaurs">Dinosaurs</string>
    <string name="category_hobby">Hobby</string>
    <string name="category_weapons">Weapons</string>
    <string name="category_history">History</string>
    <string name="category_foreign_language">Foreign language</string>
    <string name="category_language_books">Language books</string>
    <string name="category_travel">Travel</string>
    <string name="category_science">Science</string>
    <!-- Conditions -->
    <string name="condition_new">New</string>
    <string name="condition_used">Used</string>
    <!-- Status -->
    <string name="status_read">Read</string>
    <string name="status_not_read">Not read</string>
    <string name="status_in_progress">In progress</string>
    <!-- Person -->
    <string name="person_m">M</string>
    <string name="person_d">D</string>
    <!-- General -->
    <string name="none_selected">None selected</string>
    <string name="no_books_found">No books found</string>
    <!-- Toasts -->
    <string name="toast_language_selected">Selected language: %1$s</string>
    <string name="toast_category_action">Category %1$s %2$s</string>
    <string name="toast_condition_selected">Selected condition: %1$s</string>
    <string name="toast_status_selected">Selected status: %1$s</string>
    <string name="toast_person_selected">With: %1$s</string>

    <!-- SortFragment -->
    <!-- Sorting options -->
    <string name="sort_title_az">Title A-Z</string>
    <string name="sort_title_za">Title Z-A</string>
    <string name="sort_author_az">Author A-Z</string>
    <string name="sort_author_za">Author Z-A</string>
    <string name="sort_date_ascending">Publication date ascending</string>
    <string name="sort_date_descending">Publication date descending</string>
    <string name="sort_none_selected">None selected</string>
    <!-- Toast messages -->
    <string name="toast_sort_selected">Selected sort option: %1$s</string>
    <string name="toast_sort_cleared">Sorting cleared</string>
    <string name="toast_sort_not_selected">Please select a sorting option!</string>

    <!-- MainActivity -->
    <string name="search">Search: %1$s</string>
    <string name="delete_confirmation_title">Confirmation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this book?</string>
    <string name="delete_confirmation_positive">Yes</string>
    <string name="delete_confirmation_negative">No</string>
    <string name="book_deleted">Book deleted</string>
    <string name="mobil_library" />
</resources>