<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.addbook.AddBookActivity">

    <!-- FrameLayout, mint háttér és tartó -->
    <FrameLayout
        android:id="@+id/addBookBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper1">

        <!-- A tartalom görgethető lesz -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:titleTextColor="@android:color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Virtuális Könyvtár" />

            <!-- Cím -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_books_title"
                android:minHeight="48dp" />

            <!-- Szerző -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/author" />

            <EditText
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_authors_name"
                android:minHeight="48dp" />

            <!-- Megjelenés dátuma -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_date" />

            <EditText
                android:id="@+id/book_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/format"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- Kép megjelenítése -->

            <!-- Kép kiválasztása vagy kamera használata -->
            <ImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/book_image"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/buttonSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:minHeight="38dp"
                android:text="@string/select_image_from_gallery"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/buttonCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:minHeight="38dp"
                android:text="@string/capture_image_with_camera"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Kategória -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/book_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <!-- Nyelv -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language" />

            <Spinner
                android:id="@+id/book_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="48dp" />

            <!-- Típus -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/book_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/type_physical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printed" />

                <RadioButton
                    android:id="@+id/type_digital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digital" />
            </RadioGroup>

            <!-- Kinél van -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/where_is_it" />

            <EditText
                android:id="@+id/book_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who_has_it"
                android:minHeight="48dp" />

            <!-- Használt -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/condition" />

            <RadioGroup
                android:id="@+id/book_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/book_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_book" />

                <RadioButton
                    android:id="@+id/book_secondHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_hand" />
            </RadioGroup>

            <!-- Állapot -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/book_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <!-- Megjelenés dátuma -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/isbn_number" />

            <EditText
                android:id="@+id/book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isbn_number"
                android:inputType="text"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    android:background="@drawable/rounded_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/buttonSave"
                    android:background="@drawable/rounded_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
