<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <!-- Görgethető tartalom -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Cím -->
                <TextView
                    android:id="@+id/text_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sort_function"
                    android:textSize="20sp" />

                <!-- Rendezési lehetőségek -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sort_option"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/sort_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/sort_title_az"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/title_a_z" />

                    <RadioButton
                        android:id="@+id/sort_title_za"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/title_z_a" />

                    <RadioButton
                        android:id="@+id/sort_author_az"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/author_a_z" />

                    <RadioButton
                        android:id="@+id/sort_author_za"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/author_z_a" />

                    <RadioButton
                        android:id="@+id/sort_date_ascending"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/by_release_date_ascending" />

                    <RadioButton
                        android:id="@+id/sort_date_descending"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/by_release_date_descending" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:text="@string/save" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>