<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <!-- FrameLayout, mint háttér és tartó -->
    <FrameLayout
        android:id="@+id/background_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper1">

        <!-- Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:titleTextColor="@android:color/black"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="12dp"
                    android:text="@string/mobile_library"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Tartalom -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <!-- Kereső -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:queryHint="Keresés..."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Opciós gombok -->
            <LinearLayout
                android:id="@+id/options_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view">

                <Button
                    android:id="@+id/filter_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:ellipsize="end"
                    android:minHeight="38dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/filter"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/sort_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:ellipsize="end"
                    android:minHeight="38dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/sort"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/view_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:ellipsize="end"
                    android:minHeight="38dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/display"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:ellipsize="end"
                    android:minHeight="38dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/add"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/background_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:ellipsize="end"
                    android:minHeight="38dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/set_background"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Fragment konténer -->
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_bar" />

            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_bar"
                tools:listitem="@layout/book" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>